[package]
name = "orb-hil"
version = "0.0.2"
description = "Everything related to hardware-in-loop"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
bon.workspace = true
bytes.workspace = true
camino.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
clap-num.workspace = true
cmd_lib.workspace = true
color-eyre.workspace = true
etc-os-release = "0.1.1"
ftdi-embedded-hal.workspace = true
futures.workspace = true
humantime = "2.1.0"
indicatif = { workspace = true, features = ["tokio"] }
libftd2xx = { version = "0.32.4", features = ["static"] }
nusb.workspace = true
orb-build-info.path = "../build-info"
orb-s3-helpers.workspace = true
orb-security-utils = { workspace = true, features = ["reqwest"] }
probe-rs = "0.27.0"
rand = "0.8"
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
secrecy.workspace = true
serde_json.workspace = true
tempfile = "3"
thiserror.workspace = true
tokio = { workspace = true, features = ["macros"] }
tokio-serial.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus.workspace = true

[build-dependencies]
orb-build-info = { path = "../build-info", features = ["build-script"] }
