[workspace]
resolver = "2"

[package]
name = "orb-hil"
version = "0.0.2"
description = "Everything related to hardware-in-loop"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
publish = false

license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/orb-software"
rust-version = "1.91.1"
edition = "2024"

[dependencies]
aws-config = "=1.5.5"
aws-sdk-s3 = "=1.46.0"
bon = "3.5.1"
bytes = "1.7.1"
camino = "1.1.6"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.2.0"
cmd_lib = "1.9.3"
color-eyre = "0.6.5"
dialoguer = "0.12"
etc-os-release = "0.1.1"
ftdi-embedded-hal = { version = "0.22.0", features = ["libftd2xx", "libftd2xx-static"] }
futures = "0.3.30"
humantime = "2.1.0"
indicatif = { version = "0.17.9", features = ["tokio"] }
libftd2xx = { version = "0.32.4", features = ["static"] }
nusb = "0.2.0"
orb-build-info.path = "../build-info"
orb-s3-helpers = { path = "../s3-helpers" }
orb-security-utils = { path = "../security-utils", features = ["reqwest"] }
probe-rs = "0.30.0"
rand = "0.8"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
secrecy = "0.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3.10.1"
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["macros"] }
tokio-serial = "5.4.4"
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-util = "0.7.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }

[build-dependencies]
orb-build-info = { path = "../build-info", features = ["build-script"] }
