[package]
name = "orb-jobs-agent"
version = "0.0.0"
authors = ["Paul Quinn <paulquinn00@users.noreply.github.com>"]
description = "Worldcoin Jobs Agent"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
color-eyre.workspace = true
const_format = "0.2.30"
figment = { version = "0.10.8", features = ["env", "toml"] }
futures.workspace = true
libc.workspace = true
listenfd = "1.0.0"
once_cell = "1.15.0"
orb-build-info.workspace = true
orb-endpoints.workspace = true
orb-info = { workspace = true, features = ["orb-id", "orb-name", "orb-jabil-id", "orb-token", "async"] }
orb-zbus-proxies = { workspace = true, features = ["login1"] }
orb-telemetry.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_path_to_error = "0.1.8"
serde_with = "3.11.0"
tap = "1.0.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "io-util"] }
tokio-stream.workspace = true
tokio-test.workspace = true
tokio-util.workspace = true
tracing = { workspace = true, features = ["attributes"] }
zbus = { workspace = true, default-features = false, features = ["tokio"] }
zbus_systemd = { workspace = true, features = ["systemd1", "login1"] }

[dependencies.orb-relay-client]
git = "https://github.com/worldcoin/orb-relay-messages.git"
rev = "a2e071584d2e56c76961bb9d04b06cc06f673b90"

[dependencies.orb-relay-messages]
git = "https://github.com/worldcoin/orb-relay-messages.git"
rev = "a2e071584d2e56c76961bb9d04b06cc06f673b90"
features = ["client"]

[dependencies.orb-relay-test-utils]
git = "https://github.com/worldcoin/orb-relay-messages.git"
rev = "a2e071584d2e56c76961bb9d04b06cc06f673b90"

[build-dependencies]
orb-build-info = { workspace = true, features = ["build-script"] }

[dev-dependencies]
dbus-launch = "0.2.0"
serial_test = "3.2.0"
tokio = { workspace = true, features = ["sync", "test-util"] }

[package.metadata.deb]
maintainer-scripts = "debian/"
assets = [["target/release/orb-jobs-agent", "/usr/local/bin/", "755"]]
systemd-units = [{ unit-name = "worldcoin-jobs-agent" }]
