[package]
name = "orb-mcu-interface"
version = "0.0.0"
authors = ["Cyril Fougeray <cyril.fougeray@toolsforhumanity.com>"]
description = "Higher-level interface used to communicate with the MCUs"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.77"
can-rs = { path = "../can", features = ["isotp"] }
color-eyre.workspace = true
futures.workspace = true
orb-messages.workspace = true
prost = "0.12.3"
pin-project = "1.1.5"
thiserror.workspace = true
tokio-serial = "5.4.1"
tokio.workspace = true
tracing.workspace = true

[package.metadata.orb]
unsupported_targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
]

[dev-dependencies]
tracing-subscriber.workspace = true
futures.workspace = true
