[package]
name = "orb-mcu-util"
version = "0.7.0"
authors = ["Cyril Fougeray <cyril.fougeray@toolsforhumanity.com>"]
description = "Debug microcontrollers and manage firmware images"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
can-rs = { path = "../can", features = ["isotp"] }
clap = { workspace = true, features = ["derive"] }
crc32fast = "1.3.2"
eyre.workspace = true
image = "0.24.8"
orb-messages.workspace = true
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "time", "io-util"] }
tokio-serial = "5.4.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
