[package]
name = "orb-mcu-util"
version = "0.7.2"
authors = ["Cyril Fougeray <cyril.fougeray@toolsforhumanity.com>"]
description = "Debug microcontrollers and manage firmware images"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.77"
clap.workspace = true
color-eyre.workspace = true
crc32fast = "1.3.2"
image = "0.24.8"
orb-mcu-interface.path = "../mcu-interface"
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
futures.workspace = true
orb-build-info.path = "../build-info"

[build-dependencies]
orb-build-info = { path = "../build-info", features = ["build-script"] }

[package.metadata.orb]
unsupported_targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
]

[package.metadata.deb]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(tokio_unstable)']
