[package]
name = "orb-mcu-util"
version = "0.7.3"
authors = ["Cyril Fougeray <cyril.fougeray@toolsforhumanity.com>"]
description = "Debug microcontrollers and manage firmware images"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.77"
clap.workspace = true
color-eyre.workspace = true
crc32fast = "1.3.2"
futures.workspace = true
orb-build-info.workspace = true
orb-mcu-interface.workspace = true
orb-telemetry.workspace = true
rand.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[build-dependencies]
orb-build-info = { path = "../build-info", features = ["build-script"] }

[package.metadata.orb]
unsupported_targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]

[package.metadata.deb]
assets = [
	[
		"target/release/orb-mcu-util",
		"/usr/local/bin/",
		"755",
	],
	[
		"warn_renamed.sh",
		"/usr/bin/orb-mcu-util",
		"755",
	],
]

[lints.rust.unexpected_cfgs]
check-cfg = ['cfg(tokio_unstable)']
level = "warn"
