[package]
name = "orb-attest"
version = "0.2.8"
authors = ["Aleksei Fedotov <aleksei.fedotov@toolsforhumanity.com>"]
description = "A daemon for fetching backend attestation token"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
const_format = "0.2"
data-encoding = "2.3"
event-listener = "*"
eyre.workspace = true
futures.workspace = true
lazy_static = "1.4"
ring.workspace = true
secrecy = { version = "0.8.0", features = ["serde"] }
serde.workspace = true
serde_json = "~1.0"
serde_with = { version = "3.2", features=["base64"]}
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-journald = "0.3"
tracing-subscriber.workspace = true
url = "2.2"
zbus.workspace = true

[dependencies.reqwest]
version = "0.11.4"
default-features = false
features = [
  "json",
  "multipart",
  "rustls-tls-manual-roots"
]

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8.3.1", features = ["build", "git", "gitcl"] }

[dev-dependencies]
serial_test = "2.0"
tempfile = "3.3"
wiremock = "0.5"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = [
  { unit-name = "worldcoin-attest" },
]
