[package]
name = "orb-backend-state"
version = "0.0.4"
description = "Systemd service that reads current orb state from orb-manager backend"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["stage"]
stage = []

[dependencies]
clap.workspace = true
color-eyre.workspace = true
derive_more.workspace = true
futures.workspace = true
header-parsing.path = "../header-parsing"
orb-build-info.path = "../build-info"
orb-security-utils = { workspace = true, features = ["reqwest"] }
reqwest.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
zbus.workspace = true

[build-dependencies]
orb-build-info = { path = "../build-info", features = ["build-script"] }

[package.metadata.deb]
